Translated common:clientInfoForm Fields

--- a/common/src/locales/en.json
+++ b/common/src/locales/en.json
@@ -1,271 +1,35 @@
 {
-    "login": {
-        "reLoginPrompt": "CCPlease login again.",
-        "loginFailed": "CCLogin failed",
-        "inactiveLogoutAlert": "CCLogged out due to inactivity. Please login again.",
-        "loggingIn": "CCLogging in",
-        "loggingInAs": "CCLogging in as: ",
-        "enterValue_username": "CCPlease enter a username.",
-        "enterValue_password": "CCPlease enter a password.",
-        "missingValue_password": "CCMissing password.",
-        "missingValue_username": "CCMissing username.",
-        "missingValue": "CCMissing required Value",
-        "missingValue_usernamePassword": "CCMissing username and password.",
-        "requestTimeout": "CCThe request has timed out.",
-        "changePassword": "CCChange Password",
-        "changePasswordFor": "CCChange password for {{username}} (ID {{userID}})",
-        "passwordChangeConfirmation": "CCPassword changed successfully.",
-        "cantLoadUserWithID": "CCUnable to load user with ID {{userID}}"
-    },
-    "dashboard": {
-        "clientListPriority": "CCPriority Clients",
-        "clientListOutstandingRefs": "CCOutstanding Referrals",
-        "emptyInbox": "CCInbox is empty",
-        "myClients": "CCMy Clients",
-        "allClients": "CCAll Clients",
-        "showArchived": "CCShow Archived",
-        "noVisits": "CCNo Visits"
-    },
-    "clientAttr": {
-        "lastVisitDate": "CCLast visit date",
-        "clientDetails": "CCClient Details",
-        "clientRisks": "CCClient Risks",
-        "visitsRefsSurveys": "CCVisits, Referrals & Surveys",
-        "archivedClientAccessAlert": "CCThe client is archived. Only administrators can dearchive a client",
-        "clientCreated": "CCClient Created",
-        "newClient": "CCNew Client",
-        "editClient": "CCEdit Client",
-        "viewClient": "CCView Client",
-        "discardNew": "CCDiscard new client?",
-        "picture": "CCClient's picture"
-    },
-    "referralAttr": {
-        "dateReferred": "CCDate Referred",
-        "newReferral": "CCNew Referral",
-        "referralPosted": "CCReferral Posted",
-        "referralResolutionFailureAlert": "CCSomething went wrong when submitting the outcome and resolving the referral. Please try that again.",
-        "resolveVerb": "CCResolve",
-        "markResolved": "CCMark Resolved",
-        "referralDate": "CCReferral Date",
-        "resolutionDate": "CCResolution Date",
-        "resolutionStatus_pending": "CCReferral Pending",
-        "resolutionStatus_resolved": "CCReferral Resolved",
-        "condition_physiotherapy": "CCPhysiotherapy Condition",
-        "condition_mental": "CCMental Health Condition",
-        "injuryLocation_prosthetic": "CCProsthetic Injury Location",
-        "injuryLocation_orthotic": "CCOrthotic Injury Location",
-        "otherServiceRequired": "CCOther Services Required"
-    },
-    "referralTypes": {
-        "Orthotic": "CCOrthotic",
-        "Physiotherapy": "CCPhysiotherapy",
-        "Prosthetic": "CCProsthetic",
-        "Wheelchair": "CCWheelchair",
-        "HHA Nutrition and Agriculture Project": "CCHHA Nutrition and Agriculture Project",
-        "HHANAP": "CCHHANAP",
-        "Mental": "CCMental",
-        "Other": "CCOther",
-        "Visual Impairment": "CCVisual Impairment",
-        "Hearing Impairment": "CCHearing Impairment",
-        "Safeguarding": "CCSafeguarding"
-    },
-    "referralOrthoticInjuryLocations": {
-        "Weak Leg": "CCWeak Leg",
-        "Cerebral Palsy": "CCCerebral Palsy",
-        "Spina Bifida": "CCSpina Bifida",
-        "Club Foot": "CCClub Foot",
-        "Injection Neuritis": "CCInjection Neuritis",
-        "Drop Foot": "CCDrop Foot",
-        "Polio": "CCPolio",
-        "Other": "CCOther"
-    },
-    "referralWheelchairExperience": {
-        "Basic": "CCBasic",
-        "Intermediate": "CCIntermediate"
-    },
-    "referralMentalHealthConditions": {
-        "Autism": "CCAutism",
-        "Demetia": "CCDemetia",
-        "Other": "CCOther"
-    },
-
-    "surveyAttr": {
-        "baselineSurvey": "CCBaseline Survey",
-        "surveyDate": "CCSurvey Date"
-    },
-    "visitAttr": {
-        "newVisit": "CCNew Visit",
-        "visitVerb": "CCvisits",
-        "visitLocation": "CCvisit in {{body}}",
-        "date": "CCVisit Date",
-        "newVisitSurvey": "CCNew Visit Survey"
-    },
-    "riskAttr": {
-        "update_health": "CCUpdate Health Risk",
-        "update_education": "CCUpdate Education Risk",
-        "update_social": "CCUpdate Social Risk",
-        "update_nutrition": "CCUpdate Nutrition Risk",
-        "updateFailureAlert": "CCEncountered an error while trying to update the client's risk"
-    },
-    "riskLevels": {
-        "Low": "CCLow",
-        "Medium": "CCMedium",
-        "High": "CCHigh",
-        "Critical": "CCCritical"
-    },
-    "riskLevelsAbbreviated": {
-        "LO": "CCLO",
-        "ME": "CCME",
-        "HI": "CCHI",
-        "CR": "CCCR"
-    },
-    "wheelchairAttr": {
-        "experience": "CCWheelchair Experience",
-        "ownership": "CCWheelchair Owned",
-        "repairability": "CCWheelchair Repairable",
-        "hipWidth": "CCHip Width"
-    },
-    "commons": {
-        "login": "CCLogin",
-        "logout": "CCLogout",
-        "username": "CCUsername",
-        "password": "CCPassword",
-        "type": "CCType",
-        "name": "CCName",
-        "zone": "CCZone",
-        "dashboard": "CCDashboard",
-        "update": "CCUpdate",
-        "edit": "CCEdit",
-        "submit": "CCSubmit",
-        "save": "CCSave",
-        "archive": "CCArchive",
-        "dearchive": "CCDearchive",
-        "return": "CCReturn",
-        "health": "CCHealth",
-        "education": "CCEducation",
-        "social": "CCSocial",
-        "nutrition": "CCNutrition",
-        "mental": "CCMental",
-        "requirements": "CCRequirements",
-        "goals": "CCGoals",
-        "resolved": "CCResolved",
-        "unresolved": "CCUnresolved",
-        "showMore": "CCShow More",
-        "village": "CCVillage",
-        "close": "CCClose",
-        "outcome": "CCOutcome",
-        "resolve": "CCResolve",
-        "wheelchair": "CCWheelchair",
-        "physiotherapy": "CCPhysiotherapy",
-        "prosthetic": "CCProsthetic",
-        "orthotic": "CCOrthotic",
-        "hhanapAbbreviation": "CCHHA Nutrition and Agriculture Program",
-        "hhanap": "CCHHANAP",
-        "alert": "CCAlert",
-        "alerts": "CCAlerts",
-        "discard": "CCDiscard",
-        "discardChanges": "CCDiscard your changes?",
-        "discardAdded": "CCDiscard your added information?",
-        "today": "CCToday",
-        "select": "CCSelect",
-        "disability": "CCDisability",
-        "objectList": "CCDisability List",
-        "noObjectSelected": "CCNo disabilities selected",
-        "cancel": "CCCancel",
-        "client": "CCClient",
-        "fetch": "CCFetch",
-        "user": "CCUser",
-        "syncConflicts": "CCSync Conflicts",
-        "ok": "CCOK",
-        "localChanges": "CCLocal Changes",
-        "confirm": "CCConfirm",
-        "id": "CCID",
-        "status": "CCStatus",
-        "phoneNumber": "CCPhone Number",
-        "active": "CCActive",
-        "disabled": "CCDisabled",
-        "display": "CCDisplay",
-        "retry": "CCRetry",
-        "objectCreated": "CC{{object}} created successfully",
-        "objectUpdated": "CC{{object}} updated successfully",
-        "noObject": "CC{{object}} doesn't exist",
-        "sync": "CCSync",
-        "reminder": "CCReminder",
-        "empowerment": "CCEmpowerment",
-        "consent": "CCConsent",
-        "mentalHealth": "CCMental Health",
-        "search": "CCSearch",
-        "columns": "CCColumns",
-        "selectObject": "CCSelect {{object}}",
-        "filterBy": "CCFilter by",
-        "delete": "CCDelete",
+    "common": {
         "clientFields": {
-            "firstName": "CCFirst Name",
-            "lastName": "CCLast Name",
-            "birthDate": "CCBirthdate",
-            "village": "CCVillage",
-            "gender": "CCGender",
-            "zone": "CCZone",
-            "phoneNumber": "CCPhone Number",
-            "interviewConsent": "CCConsent to Interview?",
-            "caregiverPresent": "CCCaregiver Present?",
-            "caregiverPhone": "CCCaregiver Phone Number",
-            "caregiverName": "CCCaregiver Name",
-            "caregiverEmail": "CCCaregiver Email",
-            "disability": "CCDisabilities",
-            "otherDisability": "CCOther Disabilities",
-            "healthRisk": "CCHealth Risk",
-            "healthRequirements": "CCHealth Requirement(s)",
-            "healthGoals": "CCHealth Goal(s)",
-            "educationRisk": "CCEducation Risk",
-            "educationRequirements": "CCEducation Requirement(s)",
-            "educationGoals": "CCEducation Goal(s)",
-            "socialRisk": "CCSocial Risk",
-            "socialRequirements": "CCSocial Requirement(s)",
-            "socialGoals": "CCSocial Goal(s)",
-            "nutritionRisk": "CCNutrition Risk",
-            "nutritionRequirements": "CCNutrition Requirement(s)",
-            "nutritionGoals": "CCNutrition Goal(s)",
-            "mentalRisk": "CCMental Health Risk",
-            "mentalRequirements": "CCMental Health Requirement(s)",
-            "mentalGoals": "CCMental Health Goal(s)"
+            "firstName": "CC_First Name",
+            "lastName": "CC_Last Name",
+            "birthDate": "CC_Birthdate",
+            "village": "CC_Village",
+            "gender": "CC_Gender",
+            "zone": "CC_Zone",
+            "phoneNumber": "CC_Phone Number",
+            "interviewConsent": "CC_Consent to Interview?",
+            "caregiverPresent": "CC_Caregiver Present?",
+            "caregiverPhone": "CC_Caregiver Phone Number",
+            "caregiverName": "CC_Caregiver Name",
+            "caregiverEmail": "CC_Caregiver Email",
+            "disability": "CC_Disabilities",
+            "otherDisability": "CC_Other Disabilities",
+            "healthRisk": "CC_Health Risk",
+            "healthRequirements": "CC_Health Requirement(s)",
+            "healthGoals": "CC_Health Goal(s)",
+            "educationRisk": "CC_Education Risk",
+            "educationRequirements": "CC_Education Requirement(s)",
+            "educationGoals": "CC_Education Goal(s)",
+            "socialRisk": "CC_Social Risk",
+            "socialRequirements": "CC_Social Requirement(s)",
+            "socialGoals": "CC_Social Goal(s)",
+            "nutritionRisk": "CC_Nutrition Risk",
+            "nutritionRequirements": "CC_Nutrition Requirement(s)",
+            "nutritionGoals": "CC_Nutrition Goal(s)",
+            "mentalRisk": "CC_Mental Health Risk",
+            "mentalRequirements": "CC_Mental Health Requirement(s)",
+            "mentalGoals": "CC_Mental Health Goal(s)"
         }
-    },
-    "alert": {
-        "generalFailure": "CCSomething went Wrong",
-        "DeleteAlertWithSubject": "CCDelete Alert with Subject: {{subject}}",
-        "messageAlert": "CCYou have {{count}} new messages in your inbox.",
-        "unauthorizedArchive": "CCYou are not authorized to archive/dearchive clients. Please ask an administrator.",
-        "actionFailure": "CCEncountered an error while trying to {{action}} the {{object}}!",
-        "unsyncedFailure": "CCThe following changes could not be synced with the server because they have been modified by another user since your last sync. \n\nIf you would like to keep your version, you'll need to make the following changes again:",
-        "missingLocalChanges": "CCThere are no local changes on your device.",
-        "obsoleteDataForServerUpdating": "CCOur servers are undergoing major changes. As a result, any old data is now obsolete and cannot be synced. If you would still like to sync, then any local changes on your device must first be destroyed.",
-        "directUserToWebapp": "CCYou should use the web app to recreate any local changes, any changes on the following entities will be lost:",
-        "localDataAffectOnlyNotice": "CCNote that this will only affect local data, any settings that have previously been set will be unaffected.",
-        "timeDataUsageNotice": "CCThis action may take awhile, and a considerable amount of cellular data may be used.",
-        "clearLocalDataConfirmation": "CCIf you understand and would still like to proceed with the sync, type \"clear local data\" to confirm.",
-        "outdatedApp": "CCThis App is Out of Date",
-        "newVersionAvailability": "CCA new version of the HHA CBR app is available on the Google Play Store. Please update your app now, or you will be unable to sync.",
-        "reinstallingSuggestion": "CCIf you have the latest version of the app and still see this message, then try uninstalling and reinstalling the app.",
-        "logoutNotice": "CCAre you sure you want to logout?",
-        "actionConfirmationNotice": "CCAre you sure you want to {{action}} this {{object}}?"
-    },
-    "survey": {
-        "whatGrade": "CCWhat grade?",
-        "whyNotSchool": "CCWhy do you not go to school?",
-        "foodSecurity": "CCFood security",
-        "whatsNutritionStatus": "CCWhat is this child's nutritional status?",
-        "referralRequired": "CCA referral to the health center is required!",
-        "rateHealth": "CCRate your general health",
-        "assistiveDeviceNeeds": "CCWhat assistive device do you need?",
-        "satisfiedWithHealthService": "CCAre you satisfied with the health services you receive?",
-        "employmentStatus": "CCAre you employed or self-employed?",
-        "occupationStatus": "CCWhat do you do?",
-        "shelterAndCare": "CCShelter and Care",
-        "foodAndNutrition": "CCFood and Nutrition",
-        "education": "CCEducation (under 18)",
-        "livelihood": "CCLivelihood (over 16)"
-    },
-    "referral": {}
-
+    }
 }
