--- a/locales/en.json
+++ b/locales/en.json
@@ -1,7 +1,11 @@
 {
     "login": {
         "reLoginPrompt": "-Please login again.",
+
+
         "loginFailed": "-Login failed",
+
+        
         "inactiveLogoutAlert": "-Logged out due to inactivity. Please login again.",
         "loggingIn": "-Logging in",
         "loggingInAs": "-Logging in as: ",
@@ -198,38 +202,7 @@
         "columns": "-Columns",
         "selectObject": "-Select {{object}}",
         "filterBy": "-Filter by",
-        "delete": "-Delete",
-        "clientFields": {
-            "firstName": "-First Name",
-            "lastName": "-Last Name",
-            "birthDate": "-Birthdate",
-            "village": "-Village",
-            "gender": "-Gender",
-            "zone": "-Zone",
-            "phoneNumber": "-Phone Number",
-            "interviewConsent": "-Consent to Interview?",
-            "caregiverPresent": "-Caregiver Present?",
-            "caregiverPhone": "-Caregiver Phone Number",
-            "caregiverName": "-Caregiver Name",
-            "caregiverEmail": "-Caregiver Email",
-            "disability": "-Disabilities",
-            "otherDisability": "-Other Disabilities",
-            "healthRisk": "-Health Risk",
-            "healthRequirements": "-Health Requirement(s)",
-            "healthGoals": "-Health Goal(s)",
-            "educationRisk": "-Education Risk",
-            "educationRequirements": "-Education Requirement(s)",
-            "educationGoals": "-Education Goal(s)",
-            "socialRisk": "-Social Risk",
-            "socialRequirements": "-Social Requirement(s)",
-            "socialGoals": "-Social Goal(s)",
-            "nutritionRisk": "-Nutrition Risk",
-            "nutritionRequirements": "-Nutrition Requirement(s)",
-            "nutritionGoals": "-Nutrition Goal(s)",
-            "mentalRisk": "-Mental Health Risk",
-            "mentalRequirements": "-Mental Health Requirement(s)",
-            "mentalGoals": "-Mental Health Goal(s)"
-        }
+        "delete": "-Delete"
     },
     "alert": {
         "generalFailure": "-Something went Wrong",
@@ -269,7 +242,37 @@
     "referral": {},
 
     "common": {
-        "DELETE THIS BLOCK": "-DELETE THIS",
+        "clientFields": {
+            "firstName": "-First Name",
+            "lastName": "-Last Name",
+            "birthDate": "-Birthdate",
+            "village": "-Village",
+            "gender": "-Gender",
+            "zone": "-Zone",
+            "phoneNumber": "-Phone Number",
+            "interviewConsent": "-Consent to Interview?",
+            "caregiverPresent": "-Caregiver Present?",
+            "caregiverPhone": "-Caregiver Phone Number",
+            "caregiverName": "-Caregiver Name",
+            "caregiverEmail": "-Caregiver Email",
+            "disability": "-Disabilities",
+            "otherDisability": "-Other Disabilities",
+            "healthRisk": "-Health Risk",
+            "healthRequirements": "-Health Requirement(s)",
+            "healthGoals": "-Health Goal(s)",
+            "educationRisk": "-Education Risk",
+            "educationRequirements": "-Education Requirement(s)",
+            "educationGoals": "-Education Goal(s)",
+            "socialRisk": "-Social Risk",
+            "socialRequirements": "-Social Requirement(s)",
+            "socialGoals": "-Social Goal(s)",
+            "nutritionRisk": "-Nutrition Risk",
+            "nutritionRequirements": "-Nutrition Requirement(s)",
+            "nutritionGoals": "-Nutrition Goal(s)",
+            "mentalRisk": "-Mental Health Risk",
+            "mentalRequirements": "-Mental Health Requirement(s)",
+            "mentalGoals": "-Mental Health Goal(s)"
+        },
         "clientValidation":{
             "birthdayNotFuture": "-Birthdate cannot be in the future",
             "phoneNumberNotValid": "-Phone number is not valid",
