Translate baseline survey questions and build AAB with target 34 API

--- a/locales/en.json
+++ b/locales/en.json
@@ -242,6 +242,53 @@
     "referral": {},
 
     "common": {
+        "baseSurveyFields": {
+            "client_id": "-Client",
+            "surveyConsent": "-I give the consent to take the baseline survey",
+            "rateLevel": "-Health Level",
+            "health": "-Health",
+            "getService": "-I have access to rehabilitation services (e.g physiotherapy, speech therapy, training how to use assistive device)",
+            "needService": "-I need access to rehabilitation services",
+            "mentalHealth": "-I suffer from a mental health condition",
+            "haveDevice": "-I have an assistive device (e.g wheelchair, crutches, prosthetic limbs, hearing aid)",
+            "deviceWorking": "-My assistive device is working well",
+            "needDevice": "-I need an assistive device",
+            "deviceType": "-Assistive Device",
+            "serviceSatisf": "-Satisfied Rate",
+            "education": "-Education",
+            "goSchool": "-I go to school",
+            "grade": "-Grade",
+            "reasonNotSchool": "-Reason",
+            "beenSchool": "-I have been to school before",
+            "wantSchool": "-I want to go to school",
+            "social": "-Social",
+            "feelValue": "-I feel valued as a member of my community",
+            "feelIndependent": "-I feel independent",
+            "ableInSocial": "-I am able to participate in community/social events (going to church, market, meeting friends)",
+            "disabiAffectSocial": "-My disability affects my ability to interact socially",
+            "disabiDiscrimination": "-I have experienced discrimination because of my disability",
+            "livelihood": "-Livelihood",
+            "isWorking": "-I am working",
+            "job": "-Job",
+            "meetFinanceNeeds": "-This meets my financial needs",
+            "disabiAffectWork": "-My disability affects my ability to go to work",
+            "wantWork": "-I want to work",
+            "isSelfEmployed": "-I am",
+            "foodAndNutrition": "-Food and Nutrition",
+            "foodSecurityRate": "-Rate",
+            "enoughFoodPerMonth": "-I have enough food every month",
+            "isChild": "-I am a child or have a child",
+            "childNourish": "-Nourishment",
+            "empowerment": "-Empowerment",
+            "memOfOrgan": "-I am a member of some organisations which assist people with disabilities",
+            "organization": "-Organization",
+            "awareRight": "-I am aware of my rights as a citizen living with disabilities",
+            "ableInfluence": "-I feel like I am able to influence people around me",
+            "shelterAndCare": "-Shelter and Care",
+            "haveShelter": "-I have adequate shelter",
+            "accessItem": "-I have access to essential items for my household",
+        },
+
         "clientFields": {
             "firstName": "-First Name",
             "lastName": "-Last Name",
