--- a/locales/en.json
+++ b/locales/en.json
@@ -283,7 +283,6 @@
         "sureToClearForm": "-Are you sure you want to clear the form?"
     },
 
-
     "referralAttr": {
         "dateReferred": "-Date Referred",
         "newReferral": "-New Referral",
@@ -385,6 +384,12 @@
         "nutrition": "-Nutrition",
         "mental": "-Mental Health"
     },
+    "riskLevelsAbbreviated": {
+        "low": "-LO",
+        "medium": "-ME",
+        "high": "-HI",
+        "critical": "-CR"
+    },  
 
     "survey": {
         "veryPoor": "-Very Poor",
@@ -482,7 +487,29 @@
         "wheelchairRepair": "-Wheelchair Repair",
         "referralToOther": "-Referral to Other Organization",
         "referralToOtherMentalHealth": "-Referral to Other Mental Health Organization",
-        "isRequiredField": "-{{field}} is a required field"
+        "isRequiredField": "-{{field}} is a required field",
+
+        "whereVisit": "-Where was the Visit?",
+        "selectReasons": "-Select the Reasons for the Visit",
+        "outcomeOfGoal": "-What is the Outcome of the Goal?",
+        "selectImprovement": "-Select an Improvement",
+        "visitFocus": "-Visit Focus",
+        "visit": "-Visit",
+        "discardNewVisit": "-Discard this new visit?",
+        "clients": "-Client's"
+    },
+    "screenNames": {
+        "viewClient": "-View client",
+        "viewUser": "-View user",
+        "editUser": "-Edit user",
+        "newUser": "-New user",
+        "newVisit": "-New Visit",
+        "newReferral": "-New referral",
+        "newBaselineSurvey": "-New baseline survey",
+        "synchronization": "-Synchronization",
+        "inbox": "-Inbox",
+        "switchTargetServer": "-Switch Target Server",
+        "clientID": "-Client ID"
     },
     "zone": {
         "zone": "-Zone"
