--- a/web/src/locales/en.json
+++ b/web/src/locales/en.json
@@ -99,6 +99,8 @@
     "update": "-Update",
     "edit": "-Edit",
     "submit": "-Submit",
+    "next": "&&Next",
+    "previous": "&&Previous",
     "save": "-Save",
     "archive": "-Archive",
     "dearchive": "-Dearchive",
@@ -311,7 +313,10 @@
     "dearchive": "-dearchive",
     "cannotEditArchived": "-You cannot edit clients while they are archived",
     "sureToCancelEditClient": "-Are you sure you want to cancel editing the client?\nClicking OK will not save any edited information.",
-    "sureToClearForm": "-Are you sure you want to clear the form?"
+    "sureToClearForm": "-Are you sure you want to clear the form?",
+    "chooseImageFrom": "&&Choose an Image from",
+    "gallery": "&&Gallery",
+    "camera": "&&Camera"
   },
   "referralAttr": {
     "dateReferred": "-Date Referred",
@@ -382,7 +387,21 @@
     "dementia": "-Dementia",
     "experience": "-Wheelchair Experience",
     "ownership": "-Wheelchair Owned",
-    "repairability": "-Wheelchair Repairable"
+    "repairability": "-Wheelchair Repairable",
+    "selectReferralServices": "&&Select referral services",
+    "referralServices": "&&Referral Services",
+    "selectAnotherReferral": "&&Please select another referral",
+    "whatTypeOfWheelchair": "&&What type of wheelchair user?",
+    "inches": "&&inches",
+    "wheelchairInformation": "&&Wheelchair information",
+    "choosePhoto": "&&choose a photo to upload",
+    "clientHipWidth": "&&What is the client's hip width?",
+    "whatCondition": "&&What condition does the client have?",
+    "whereIsInjury": "&&Where is the injury?",
+    "whatDoesClientNeed": "&&What does the client need?",
+    "selectMentalHealthReferral": "&&Please select mental health referral",
+    "describeReferral": "&&Please describe the referral",
+    "discardNewReferral": "&&Discard this new referral?"
   },
   "risks": {
     "riskLevel": "-Risk Level",
@@ -510,13 +529,13 @@
     "clients": "-Client's"
   },
   "screenNames": {
-    "viewClient": "-View client",
-    "viewUser": "-View user",
-    "editUser": "-Edit user",
-    "newUser": "-New user",
+    "viewClient": "-View Client",
+    "viewUser": "-View User",
+    "editUser": "-Edit User",
+    "newUser": "-New User",
     "newVisit": "-New Visit",
-    "newReferral": "-New referral",
-    "newBaselineSurvey": "-New baseline survey",
+    "newReferral": "-New Referral",
+    "newBaselineSurvey": "-New Baseline Survey",
     "synchronization": "-Synchronization",
     "inbox": "-Inbox",
     "switchTargetServer": "-Switch Target Server",
@@ -543,27 +562,26 @@
     "clientsWithDisabilities": "-Clients with Disabilities:"
   },
   "sync": {
-    "sureResetLocalDB": "&&Are you sure you want to reset local database",
-    "reset": "&&Reset",
-    "databaseReset": "&&Database Reset",
-    "syncComplete": "&&Synchronization Complete",
-    "syncFailed": "&&Synchronization Failed",
-    "database": "&&Database",
-    "serverSync": "&&Server Sync",
-    "clearLocal": "&&Clear Local",
-    "syncStatistics": "&&Sync Statistics",
-    "lastPullAt": "&&Last Pulled at:",
-    "localChanges": "&&Local Changes:",
-    "remoteChanges": "&&Remote Changes:",
-    "versionName": "&&Version Name:",
-    "syncSettings": "&&Sync Settings",
-    "autoSyncing": "&&Automatic Syncing",
-    "syncOverCellular": "&&Sync over Cellular",
-    "success": "&&success",
-    "failed": "&&failed",
-    "neverSynced": "&&Never Synced",
-    "downloadNewVersion": "&&Please download the latest update for HHA CBR from the Google Play Store.",
-    "x":""
+    "sureResetLocalDB": "-Are you sure you want to reset local database",
+    "reset": "-Reset",
+    "databaseReset": "-Database Reset",
+    "syncComplete": "-Synchronization Complete",
+    "syncFailed": "-Synchronization Failed",
+    "database": "-Database",
+    "serverSync": "-Server Sync",
+    "clearLocal": "-Clear Local",
+    "syncStatistics": "-Sync Statistics",
+    "lastPullAt": "-Last Pulled at:",
+    "localChanges": "-Local Changes:",
+    "remoteChanges": "-Remote Changes:",
+    "versionName": "-Version Name:",
+    "syncSettings": "-Sync Settings",
+    "autoSyncing": "-Automatic Syncing",
+    "syncOverCellular": "-Sync over Cellular",
+    "success": "-success",
+    "failed": "-failed",
+    "neverSynced": "-Never Synced",
+    "downloadNewVersion": "-Please download the latest update for HHA CBR from the Google Play Store."
   },
   "zone": {
     "zone": "-Zone"
