Implement language picker

--- a/common/src/locales/en.json
+++ b/common/src/locales/en.json
@@ -99,8 +99,8 @@
     "update": "-Update",
     "edit": "-Edit",
     "submit": "-Submit",
-    "next": "&&Next",
-    "previous": "&&Previous",
+    "next": "-Next",
+    "previous": "-Previous",
     "save": "-Save",
     "archive": "-Archive",
     "dearchive": "-Dearchive",
@@ -314,9 +314,9 @@
     "cannotEditArchived": "-You cannot edit clients while they are archived",
     "sureToCancelEditClient": "-Are you sure you want to cancel editing the client?\nClicking OK will not save any edited information.",
     "sureToClearForm": "-Are you sure you want to clear the form?",
-    "chooseImageFrom": "&&Choose an Image from",
-    "gallery": "&&Gallery",
-    "camera": "&&Camera"
+    "chooseImageFrom": "-Choose an Image from",
+    "gallery": "-Gallery",
+    "camera": "-Camera"
   },
   "referralAttr": {
     "dateReferred": "-Date Referred",
@@ -388,20 +388,20 @@
     "experience": "-Wheelchair Experience",
     "ownership": "-Wheelchair Owned",
     "repairability": "-Wheelchair Repairable",
-    "selectReferralServices": "&&Select referral services",
-    "referralServices": "&&Referral Services",
-    "selectAnotherReferral": "&&Please select another referral",
-    "whatTypeOfWheelchair": "&&What type of wheelchair user?",
-    "inches": "&&inches",
-    "wheelchairInformation": "&&Wheelchair information",
-    "choosePhoto": "&&choose a photo to upload",
-    "clientHipWidth": "&&What is the client's hip width?",
-    "whatCondition": "&&What condition does the client have?",
-    "whereIsInjury": "&&Where is the injury?",
-    "whatDoesClientNeed": "&&What does the client need?",
-    "selectMentalHealthReferral": "&&Please select mental health referral",
-    "describeReferral": "&&Please describe the referral",
-    "discardNewReferral": "&&Discard this new referral?"
+    "selectReferralServices": "-Select referral services",
+    "referralServices": "-Referral Services",
+    "selectAnotherReferral": "-Please select another referral",
+    "whatTypeOfWheelchair": "-What type of wheelchair user?",
+    "inches": "-inches",
+    "wheelchairInformation": "-Wheelchair information",
+    "choosePhoto": "-choose a photo to upload",
+    "clientHipWidth": "-What is the client's hip width?",
+    "whatCondition": "-What condition does the client have?",
+    "whereIsInjury": "-Where is the injury?",
+    "whatDoesClientNeed": "-What does the client need?",
+    "selectMentalHealthReferral": "-Please select mental health referral",
+    "describeReferral": "-Please describe the referral",
+    "discardNewReferral": "-Discard this new referral?"
   },
   "risks": {
     "riskLevel": "-Risk Level",
