--- a/common/src/locales/en.json
+++ b/common/src/locales/en.json
@@ -84,7 +84,7 @@
     "visitAttr": {
         "newVisit": "-New Visit",
         "visitVerb": "-visits",
-        "visitLocation": "-visit in {{body}}",
+        "visitLocation": "-Visit in {{body}}",
         "date": "-Visit Date",
         "newVisitSurvey": "-New Visit Survey"
     },
